--- a/Frame/Layout/4_SideBars/Gab/gabSidebar.html
+++ b/Frame/Layout/4_SideBars/Gab/gabSidebar.html
@@ -37,35 +37,35 @@
                     <div class="g_main g_margin_top_5 g_flew_row g_pad_lr_10 col-xl-3 col-lg-3 col-md-4 col-sm-6 g_text_center">
                         <div class="g_main">
                             <div class="g_main g_mw ">
-                                <a class="g_main g_cursor g_flew_grow" title="30,523k Gabs" aria-label="24k Gabs" target="popup" onclick="window.open('https://gab.com/GreyingError','popup','width=600,height=600'); return false;">
-                                <span class="g_main g_setty g_green_text g_font_sizevar g_fontw_600 g_text_center">30.5k</span>
+                                <a class="g_main g_cursor g_flew_grow" title="31,358 Gabs" aria-label="24k Gabs" target="popup" onclick="window.open('https://gab.com/GreyingError','popup','width=600,height=600'); return false;">
+                                <span class="g_main g_setty g_green_text g_font_sizevar g_fontw_600 g_text_center">31.3k</span>
                                 <span class="g_main g_setty g_grey_text g_font_varsizer g_fontw_500 g_text_center" data-text="Gabs">Post</span></a>
                             </div></div></div>
 
                     <div class="g_main g_margin_top_5 g_flew_row g_pad_lr_10 col-xl-3 col-lg-3 col-md-4 col-sm-6 g_text_center">
                         <div class="g_main">
                             <div class="g_main g_mw ">
-                                <a class="g_main g_cursor g_flew_grow" title="3,863 Followers" aria-label="Followers" target="popup" onclick="window.open('https://gab.com/GreyingError/followers','popup','width=600,height=600'); return false;">
+                                <a class="g_main g_cursor g_flew_grow" title="3,858 Followers" aria-label="Followers" target="popup" onclick="window.open('https://gab.com/GreyingError/followers','popup','width=600,height=600'); return false;">
 
-                                <span class="g_main g_setty g_green_text g_font_sizevar g_fontw_600">3.9k</span></a>
+                                <span class="g_main g_setty g_green_text g_font_sizevar g_fontw_600">4k</span></a>
                                 <span class="g_main g_setty g_grey_text g_font_varsizer g_fontw_500" data-text="Followers">Reach</span>
                             </div></div></div>
 
                     <div class="g_main g_margin_top_5 g_flew_row g_pad_lr_10 col-xl-3 col-lg-3 col-md-4 col-sm-6 g_text_center">
                         <div class="g_main">
                             <div class="g_main g_mw ">
-                                <a class="g_main g_cursor g_flew_grow" title="806 Followers" aria-label="Follows" target="popup" onclick="window.open('https://gab.com/GreyingError/following','popup','width=600,height=600'); return false;">
+                                <a class="g_main g_cursor g_flew_grow" title="797 Followers" aria-label="Follows" target="popup" onclick="window.open('https://gab.com/GreyingError/following','popup','width=600,height=600'); return false;">
 
-                                <span class="g_main g_setty g_green_text g_font_sizevar g_fontw_600">806</span></a>
+                                <span class="g_main g_setty g_green_text g_font_sizevar g_fontw_600">800</span></a>
                                 <span class="g_main g_setty g_grey_text g_font_varsizer g_fontw_500" data-text="Follows">Frens</span>
                             </div></div></div>
 
                     <div class=" g_main g_margin_top_5 g_flew_row g_pad_lr_10 col-xl-3 col-lg-3 col-md-6 col-sm-6 g_text_center">
                         <div class="g_main">
                             <div class="g_main g_mw ">
-                                <a class="g_main g_cursor g_flew_grow" title="Blocked by 2,948" aria-label="Block">
+                                <a class="g_main g_cursor g_flew_grow" title="Blocked by 2,954" aria-label="Block">
 
-                                <span class="g_main g_setty g_green_text g_font_sizevar g_fontw_600">2.95k</span></a>
+                                <span class="g_main g_setty g_green_text g_font_sizevar g_fontw_600">3k</span></a>
                                 <span class="g_main g_setty g_grey_text g_font_varsizer g_fontw_500" data-text="Follows">BlockBy</span>
                             </div></div></div>
                 </div>
