Gabe Sidebar Style Update

--- a/Frame/Layout/4_SideBars/Gab/gabSidebar.html
+++ b/Frame/Layout/4_SideBars/Gab/gabSidebar.html
@@ -70,79 +70,77 @@
                             </div></div></div>
                 </div>
                 <div class="clearfix"></div>
-                <div id="Sjoin" class="g_align_center">
+                <div id="MediaJoin" class="g_align_center">
+                    <div class="g_main">
+                        <div class="g_main g_mw g_align_center">
+                            <span class="g_main g_mw g_fsh g_of_x g_primary_text">&nbsp;</span>
+                                <bdi class="g_setty g_spacewrap">
+                                    <strong class="g_setty g_overflow_wrap g_spacewrap g_primary_text g_font_medium g_fontw_600 g_line_h_tight g_margin_r_2 g_text_center tc">Join</strong></bdi>
+                                </div></div></div>
 
-                    <div class=" g_main g_flew_row g_pad_lr_15 col-xl-4 col-lg-4 col-md-4 col-sm-4 g_align_center">
+                <div id="Sjoin" class="g_align_center">
+                    <div class="g_main  g_pad_lr_15 col-xl-4 col-lg-4 col-md-4 col-sm-4 g_align_center">
                         <div id="GabNAME" class="g_align_center">
                             <div class="g_main g_margin_top_32 g_border_radius g_border_color g_border_width_6 g_align_center">
                                 <div class="TechSecSW swt-TechSWGithubco" style="height: 42px; width: 42px;"></div></div>
                             <div class="g_main ">
                                 <div class="g_main g_mw g_align_center">
-                                    <span class="g_main g_flew_row g_mw g_fsh g_of_x g_primary_text">&nbsp;</span>
-                                        <bdi class="g_setty g_spacewrap ">
-                                            <strong class="g_setty g_overflow_wrap g_spacewrap g_fontw_600 g_primary_text g_margin_r_2 .g_line_h_1quart g_font_medium g_text_center tc">Join</strong></bdi>
 
-                                        <svg class="g_main" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="15px" height="15px" viewBox="0 0 32 32" xml:space="preserve" role="img">
+                                    <svg class="g_main" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="15px" height="15px" viewBox="0 0 576 512" xml:space="preserve" role="img">
 
-                                            <title>Verified Account</title>
-                                            <g><path fill="#3E99ED" d="M 27.31 4.69 C 24.29 1.66 20.27 0 16 0 C 11.73 0 7.71 1.66 4.69 4.69 C 1.66 7.71 0 11.73 0 16 C 0 20.27 1.66 24.29 4.69 27.31 C 7.71 30.34 11.73 32 16 32 C 20.27 32 24.29 30.34 27.31 27.31 C 30.34 24.29 32 20.27 32 16 C 32 11.73 30.34 7.71 27.31 4.69 Z M 23.64 12.19 L 14.7 21.13 C 14.52 21.32 14.28 21.41 14.04 21.41 C 13.8 21.41 13.56 21.32 13.38 21.13 L 8.36 16.11 C 7.99 15.75 7.99 15.15 8.36 14.79 C 8.72 14.42 9.32 14.42 9.68 14.79 L 14.04 19.14 L 22.32 10.87 C 22.68 10.5 23.28 10.5 23.64 10.87 C 24.01 11.23 24.01 11.82 23.64 12.19 Z M 23.64 12.19"></path></g></svg>
-                                    <div class=" g_main g_margin_bot_15 g_margin_top_5 g_flew_row  g_align_center">
+                                        <title>Verified Account</title>
+                                        <g><path fill="#00d178" d="M446.53 97.43C439.67 60.23 407.19 32 368 32c-39.23 0-71.72 28.29-78.54 65.54C126.75 112.96-.5 250.12 0 416.98.11 451.9 29.08 480 64 480h304c8.84 0 16-7.16 16-16 0-17.67-14.33-32-32-32h-79.49l35.8-48.33c24.14-36.23 10.35-88.28-33.71-106.6-23.89-9.93-51.55-4.65-72.24 10.88l-32.76 24.59c-7.06 5.31-17.09 3.91-22.41-3.19-5.3-7.08-3.88-17.11 3.19-22.41l34.78-26.09c36.84-27.66 88.28-27.62 125.13 0 10.87 8.15 45.87 39.06 40.8 93.21L469.62 480H560c8.84 0 16-7.16 16-16 0-17.67-14.33-32-32-32h-53.63l-98.52-104.68 154.44-86.65A58.16 58.16 0 0 0 576 189.94c0-21.4-11.72-40.95-30.48-51.23-40.56-22.22-98.99-41.28-98.99-41.28zM368 136c-13.26 0-24-10.75-24-24 0-13.26 10.74-24 24-24 13.25 0 24 10.74 24 24 0 13.25-10.75 24-24 24z"></path></g></svg>
+                                    <div class=" g_main g_margin_bot_15 g_margin_top_5 g_align_center">
                                         <div class="g_main">
                                             <div class="g_main g_mw">
-                                        <a class="g_main g_cursor g_flew_grow" title="Join Gab" aria-label="SignUp" target="popup" onclick="window.open('https://www.gab.com/greyingerror','popup','width=600,height=600'); return false;">
+                                        <a class="g_main g_cursor" title="Join Gab" aria-label="SignUp" target="popup" onclick="window.open('https://www.gab.com/greyingerror','popup','width=600,height=600'); return false;">
 
-                                        <span class="g_main g_setty g_green_text g_font_sizevar g_fontw_600 g_text_center tc">Gab</span></a>
+                                        <span class="g_main g_setty text-muted g_font_sizevar g_fontw_600 g_text_center tc">Gab</span></a>
                                 </div></div></div>
                             </div></div></div>
                         </div>
 
-                    <div class=" g_main g_flew_row g_pad_lr_15 col-xl-4 col-lg-4 col-md-4 col-sm-4 g_align_center">
+                    <div class="g_main g_pad_lr_15 col-xl-4 col-lg-4 col-md-4 col-sm-4 g_align_center">
 
                         <div id="MindNAME" class="g_align_center">
                             <div class="g_main g_margin_top_32 g_border_radius g_border_color g_border_width_6 g_align_center">
                                 <div class="TechSecSW swt-TechSWGithubco" style="height: 42px; width: 42px;"></div></div>
                             <div class="g_main ">
                                 <div class="g_main g_mw g_align_center">
-                                    <span class="g_main g_flew_row g_mw g_fsh g_of_x g_primary_text">&nbsp;</span>
-                                        <bdi class="g_setty g_spacewrap ">
-                                            <strong class="g_setty g_overflow_wrap g_spacewrap g_fontw_600 g_primary_text g_margin_r_2 .g_line_h_1quart g_font_medium g_text_center tc">Join</strong></bdi>
 
-                                        <svg class="g_main" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="15px" height="15px" viewBox="0 0 32 32" xml:space="preserve" role="img">
+                                    <svg class="g_main" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="15px" height="15px" viewBox="0 0 352 512" xml:space="preserve" role="img">
 
-                                            <title>Verified Account</title>
-                                            <g><path fill="#3E99ED" d="M 27.31 4.69 C 24.29 1.66 20.27 0 16 0 C 11.73 0 7.71 1.66 4.69 4.69 C 1.66 7.71 0 11.73 0 16 C 0 20.27 1.66 24.29 4.69 27.31 C 7.71 30.34 11.73 32 16 32 C 20.27 32 24.29 30.34 27.31 27.31 C 30.34 24.29 32 20.27 32 16 C 32 11.73 30.34 7.71 27.31 4.69 Z M 23.64 12.19 L 14.7 21.13 C 14.52 21.32 14.28 21.41 14.04 21.41 C 13.8 21.41 13.56 21.32 13.38 21.13 L 8.36 16.11 C 7.99 15.75 7.99 15.15 8.36 14.79 C 8.72 14.42 9.32 14.42 9.68 14.79 L 14.04 19.14 L 22.32 10.87 C 22.68 10.5 23.28 10.5 23.64 10.87 C 24.01 11.23 24.01 11.82 23.64 12.19 Z M 23.64 12.19"></path></g></svg>
+                                        <title>Verified Account</title>
+                                        <g><path fill="#FFDD63" d="M96.06 454.35c.01 6.29 1.87 12.45 5.36 17.69l17.09 25.69a31.99 31.99 0 0 0 26.64 14.28h61.71a31.99 31.99 0 0 0 26.64-14.28l17.09-25.69a31.989 31.989 0 0 0 5.36-17.69l.04-38.35H96.01l.05 38.35zM0 176c0 44.37 16.45 84.85 43.56 115.78 16.52 18.85 42.36 58.23 52.21 91.45.04.26.07.52.11.78h160.24c.04-.26.07-.51.11-.78 9.85-33.22 35.69-72.6 52.21-91.45C335.55 260.85 352 220.37 352 176 352 78.61 272.91-.3 175.45 0 73.44.31 0 82.97 0 176zm176-80c-44.11 0-80 35.89-80 80 0 8.84-7.16 16-16 16s-16-7.16-16-16c0-61.76 50.24-112 112-112 8.84 0 16 7.16 16 16s-7.16 16-16 16z"></path></g></svg>
                                     
                                     <div class=" g_main g_margin_bot_15 g_margin_top_5 g_flew_row  g_align_center">
                                         <div class="g_main">
                                             <div class="g_main g_mw">
-                                        <a class="g_main g_cursor g_flew_grow" title="Join Minds" aria-label="SignUp" target="popup" onclick="window.open('https://www.minds.com/?referrer=greyingerror9','popup','width=600,height=600'); return false;">
+                                        <a class="g_main g_cursor" title="Join Minds" aria-label="SignUp" target="popup" onclick="window.open('https://www.minds.com/?referrer=greyingerror9','popup','width=600,height=600'); return false;">
 
-                                        <span class="g_main g_setty g_green_text g_font_sizevar g_fontw_600 g_text_center tc">Minds</span></a>
+                                        <span class="g_main g_setty text-muted g_font_sizevar g_fontw_600 g_text_center tc">Mind</span></a>
                                 </div></div></div>
                             </div></div></div>
                         </div>
 
-                    <div class=" g_main  g_flew_row g_pad_lr_15 col-xl-4 col-lg-4 col-md-4 col-sm-4 g_align_center">
+                    <div class=" g_main g_pad_lr_15 col-xl-4 col-lg-4 col-md-4 col-sm-4 g_align_center">
                         <div id="GITNAME" class="g_align_center">
                             <div class="g_main g_margin_top_32 g_border_radius g_border_color g_border_width_6 g_align_center">
                                 <div class="TechSecSW swt-TechSWGithubco" style="height: 42px; width: 42px;"></div></div>
                             <div class="g_main ">
                                 <div class="g_main g_mw g_align_center">
-                                    <span class="g_main g_flew_row g_mw g_fsh g_of_x g_primary_text">&nbsp;</span>
-                                        <bdi class="g_setty g_spacewrap ">
-                                            <strong class="g_setty g_overflow_wrap  g_spacewrap g_fontw_600 g_primary_text g_margin_r_2 .g_line_h_1quart g_font_medium g_text_center tc">Join</strong></bdi>
 
-                                        <svg class="g_main" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="15px" height="15px" viewBox="0 0 32 32" xml:space="preserve" role="img">
+                                    <svg class="g_main" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="15px" height="15px" viewBox="0 0 1024 1024"> xml:space="preserve" role="img">
 
-                                            <title>Verified Account</title>
-                                            <g><path fill="#3E99ED" d="M 27.31 4.69 C 24.29 1.66 20.27 0 16 0 C 11.73 0 7.71 1.66 4.69 4.69 C 1.66 7.71 0 11.73 0 16 C 0 20.27 1.66 24.29 4.69 27.31 C 7.71 30.34 11.73 32 16 32 C 20.27 32 24.29 30.34 27.31 27.31 C 30.34 24.29 32 20.27 32 16 C 32 11.73 30.34 7.71 27.31 4.69 Z M 23.64 12.19 L 14.7 21.13 C 14.52 21.32 14.28 21.41 14.04 21.41 C 13.8 21.41 13.56 21.32 13.38 21.13 L 8.36 16.11 C 7.99 15.75 7.99 15.15 8.36 14.79 C 8.72 14.42 9.32 14.42 9.68 14.79 L 14.04 19.14 L 22.32 10.87 C 22.68 10.5 23.28 10.5 23.64 10.87 C 24.01 11.23 24.01 11.82 23.64 12.19 Z M 23.64 12.19"></path></g></svg>
+                                        <title>Verified Account</title>
+                                        <g><path fill="#3E99ED" d="M950.930286 512q0 143.433143-83.748571 257.974857t-216.283429 158.573714q-15.433143 2.852571-22.601143-4.022857t-7.168-17.115429l0-120.539429q0-55.442286-29.696-81.115429 32.548571-3.437714 58.587429-10.313143t53.686857-22.308571 46.299429-38.034286 30.281143-59.977143 11.702857-86.016q0-69.12-45.129143-117.686857 21.138286-52.004571-4.534857-116.589714-16.018286-5.12-46.299429 6.290286t-52.589714 25.161143l-21.723429 13.677714q-53.174857-14.848-109.714286-14.848t-109.714286 14.848q-9.142857-6.290286-24.283429-15.433143t-47.689143-22.016-49.152-7.68q-25.161143 64.585143-4.022857 116.589714-45.129143 48.566857-45.129143 117.686857 0 48.566857 11.702857 85.723429t29.988571 59.977143 46.006857 38.253714 53.686857 22.308571 58.587429 10.313143q-22.820571 20.553143-28.013714 58.88-11.995429 5.705143-25.746286 8.557714t-32.548571 2.852571-37.449143-12.288-31.744-35.693714q-10.825143-18.285714-27.721143-29.696t-28.306286-13.677714l-11.410286-1.682286q-11.995429 0-16.603429 2.56t-2.852571 6.582857 5.12 7.972571 7.460571 6.875429l4.022857 2.852571q12.580571 5.705143 24.868571 21.723429t17.993143 29.110857l5.705143 13.165714q7.460571 21.723429 25.161143 35.108571t38.253714 17.115429 39.716571 4.022857 31.744-1.974857l13.165714-2.267429q0 21.723429 0.292571 50.834286t0.292571 30.866286q0 10.313143-7.460571 17.115429t-22.820571 4.022857q-132.534857-44.032-216.283429-158.573714t-83.748571-257.974857q0-119.442286 58.88-220.306286t159.744-159.744 220.306286-58.88 220.306286 58.88 159.744 159.744 58.88 220.306286z"></path></g></svg>
 
                                     <div class=" g_main g_margin_bot_15 g_margin_top_5 g_flew_row g_align_center">
                                         <div class="g_main">
                                             <div class="g_main g_mw">
-                                                <a class="g_main g_cursor g_flew_grow" title="Join Git" aria-label="SignUp" target="popup" onclick="window.open('https://github.com/signup?ref_cta=Sign+up&amp;ref_loc=header+logged+out&amp;ref_page=%2F&amp;source=header-home','popup','width=600,height=600'); return false;">
+                                                <a class="g_main g_cursor" title="Join Git" aria-label="SignUp" target="popup" onclick="window.open('https://github.com/signup?ref_cta=Sign+up&amp;ref_loc=header+logged+out&amp;ref_page=%2F&amp;source=header-home','popup','width=600,height=600'); return false;">
 
-                                        <span class="g_main g_setty g_green_text g_font_sizevar g_fontw_600 g_text_center tc">Git</span></a>
+                                        <span class="g_main g_setty text-muted g_font_sizevar g_fontw_600 g_text_center tc">Git</span></a>
                                     </div></div></div>
                             </div></div></div>
                         </div>
