Roof Typo Fixes

--- a/Frame/Layout/3_Content/BSupport/roofPro.html
+++ b/Frame/Layout/3_Content/BSupport/roofPro.html
@@ -52,6 +52,7 @@
                 <!--Summary-->
                 <div class="panel-default panel-body tc">
                     <h5 class="bh">Bio</h5>
-                    <p>Dylann Storm Roof, of Columbia S.C., an avowed White Nationalist, whom on June 17, 2015 entered the Emanuel African Methodist Episcopal Church and performed a political assassination of the then senior pastor and state senator Clementa C. Pinckney. Whom was campaigning earlier that day with Democratic presidential candidate Hillary Clinton.</p> 
-                    <p>Eight other negros who were present at the time of the assaniation were also killed, Roof was sentenced to death for the successful political assaniation on April 10, 2017 &amp; is currently incarcerated at Terre Haute U.S. Penitentiary. Dylann Roof is the first person in U.S. history to have faced both a state and federal death penalty at the same time.</p></div></div>
+                    <p>Dylann Storm Roof, of Columbia S.C., an avowed White Nationalist, whom on June 17, 2015 entered the Emanuel African Methodist Episcopal Church and performed a political assassination of the then senior pastor and state senator Clementa C. Pinckney.<br> 
+                    Clementa C. Pinckney, whom was campaigning earlier that day with Democratic presidential candidate Hillary Clinton.</p> 
+                    <p>Eight other negros who were present at the time of the assassination were also killed in the process, Roof was sentenced to death for the successful political assassination on April 10, 2017 &amp; is currently incarcerated at Terre Haute U.S. Penitentiary. Dylann Roof is the first person in U.S. history to have faced both a state and federal death penalty at the same time.</p></div></div>
         </section></div></section>
