--- a/Frame/Layout/3_Content/BSupport/bowerPro.html
+++ b/Frame/Layout/3_Content/BSupport/bowerPro.html
@@ -51,7 +51,7 @@
                 <div class="clearfix"></div>
 <!--Summary-->
                 <div class="panel-default panel-body tc">
-                    <p>Robert Gregory Bowers, of Baldwin, P.A., an avowed White Nationalist<br>
+                    <p>Robert Gregory Bowers, of Baldwin, Pennsylvania , an avowed White Nationalist<br>
                     whom went to war against HIAS to protect the border was sentenced to<br>
                     TBD(State - TBD)
                     August 2, 2023(Federal - Death)<br>
