--- a/Frame/Layout/3_Content/BFASH/FashAudio/Menus/sfasongs.html
+++ b/Frame/Layout/3_Content/BFASH/FashAudio/Menus/sfasongs.html
@@ -1092,29 +1092,30 @@
                     <p>[Intro]<br>
                     Ah yeah, yo!<br>
                     This song is dedicated to all the zooaphiliac people<br>
-                    All the White zooaphiliacs people who worship niggers and jews and destroy real nice White lives<br>
+                    All the zooaphiliacs who worship niggers and jews and destroy real nice White lives<br>
                     And have no idea whats it like to be blackpilled as blah</p>
 
                     <p>[V1]<br>
-                    I feel like I'm walking deathrow without a hatecrime case yet<br>
-                    I'm popping off rythmes, to avoid taking a knee on george floyds neck<br>
-                    I deserve respect but get disrespect - as my country is destroyed and wrecked<br>
+                    [I] feel like I'm walking deathrow, without a hatecrime case yet<br>
+                    I'm rythmeing sets , to avoid taking a knee on george floyds neck<br>
+                    I deserve respect, but get disrespect - as my country is destroyed and wrecked<br>
                     'torn to shreds, no White cohesion, (no political solutions), noway to reverse this debt<br><br>
 
                     Ramen wage got my adrenaline caged, full of racism and rage<br>
-                    Especially when I'm {redacted}, lets just just turn the page<br>
-                    my life is passing over, that's got my ass hyper<br>
-                    I pray that God answers, but maybe the lesson learned is nicer<br><br>
+                    Especially when I'm, {redacted},<br>
+                    while my life passes over<br>
+                    that's got my ass hyper<br>
+                    I pray that God answers, but maybe the lesson is nicer<br><br>
 
-                    Watching Whites cucking behind locked doors in their pathfinders<br>
+                    Watching Whites cucking behind locked doors in pathfinders<br>
                     These griftin shill podcasters becoming autograph signers<br>
-                    All preaching diversity just to get blown up leaving civilization behind us<br> by shitskins  
+                    All preaching diversity just to get blown up leaving civilization behind us<br> by shitskins<br>  
                     Along with the small fry's and average half pinter's<br><br>
 
                     While these supposed pro-Whites turn bitch like they have vaginas<br>
                     'Cause they see them dollar signs and let the comfort blind us<br>
                     Mammon will brainwash you and leave ya ass nigger brained mindless<br>
-                    Yes We hate you usurious snakes who slither in the grass spineless</p>
+                    To many usurious snakes who slither in the grass spineless</p>
 
                     <p>[Hook 2x]<br>
                     That's blackpilled<br>
@@ -1145,12 +1146,12 @@
                     Walk around pissed and smoke a cig of 2 packs a day<br>
                     And yesterday went up in smoke so quick it seems like it was just today<br>
                     The normies want to throw the blame but I'm too jewwoke to play<br>
-                    Live half my life on Whitepills but cant seem to throw the rest of these blackpills away</p>
+                    Live half my life on Whitepills but cant seem to throw these blacks away</p>
 
                     <p>[Hook 2x]<br><br>
                     [V3]<br>
                     There's people that love me and people that hate me<br>
-                    But it's the spirit of Christ that made me this javelin toting Nazi<br>
+                    But it's the spirit of Christ that made me this javelin toting violent Nazi<br>
                     I want the shitskins, niggers, the zooaphiliacs and jews gone<br>
                     Even if that means I'll end up burning in Hell scorching in flames<br><br>
 
@@ -1166,7 +1167,7 @@
 
                     Now Im flaunting them handing them out to the volk from whom these jews stole them<br>
                     I got a couple of rings and a brand new watch, yall want 'em?<br>
-                    'Cause I never will go gold with my songs<br>
+                    'Cause I never will go gold with these dumb songs<br>
                     I rather pogrom anyways with nothing but guns drawn</p>
 
                     <p>[Hook 3x]</p>
