--- a/Frame/Layout/3_Content/BFASH/FashAudio/Menus/sfasongs.html
+++ b/Frame/Layout/3_Content/BFASH/FashAudio/Menus/sfasongs.html
@@ -1096,25 +1096,25 @@
                     And have no idea whats it like to be blackpilled as blah</p>
 
                     <p>[V1]<br>
-                    [I] feel like I'm walking deathrow, without a hatecrime case yet<br>
-                    I'm rythmeing sets , to avoid taking a knee on george floyds neck<br>
-                    I deserve respect, but get disrespect - as my country is destroyed and wrecked<br>
-                    'torn to shreds, no White cohesion, (no political solutions), noway to reverse this debt<br><br>
+                    [I] feel like I'm walking deathrow, without a hatecrime yet<br>
+                    rythmeing sets, knee on george floyds neck<br>
+                    I deserve respect, but get disrespect - my country is destroyed and wrecked<br>
+                    'torn to shreds, no White cohesion, avoiding the feds, noway to reverse this debt<br><br>
 
                     Ramen wage got my adrenaline caged, full of racism and rage<br>
-                    Especially when I'm, {redacted},<br>
-                    while my life passes over<br>
+                    Especially when I'm engaged, so I am {redacted}, while my life passes over<br>
                     that's got my ass hyper<br>
-                    I pray that God answers, but maybe the lesson is nicer<br><br>
+                    I pray that God answers, but maybe the lesson learned nicer<br><br>
 
                     Watching Whites cucking behind locked doors in pathfinders<br>
                     These griftin shill podcasters becoming autograph signers<br>
-                    All preaching diversity just to get blown up leaving civilization behind us<br> by shitskins<br>  
+                    All preaching diversity just to get blown up by shitskins<br>
+                    leaving civilization behind us<br>
                     Along with the small fry's and average half pinter's<br><br>
 
                     While these supposed pro-Whites turn bitch like they have vaginas<br>
                     'Cause they see them dollar signs and let the comfort blind us<br>
-                    Mammon will brainwash you and leave ya ass nigger brained mindless<br>
+                    Mammon will brainwash you and leave ya nigger brained mindless<br>
                     To many usurious snakes who slither in the grass spineless</p>
 
                     <p>[Hook 2x]<br>
@@ -1129,48 +1129,48 @@
 
                     <p>[V2]<br>
                     White life was full of empty promises and broken dreams<br>
-                    I'm hoping things will look up but Im White so ain't no job openings<br>
+                    I'm hoping things will look up, but Im White so ain't no job openings<br>
                     I feel discouraged hungry and malnourished<br>
-                    Living just to watch evil get a bonus, its bogus, 110 approaching kindle the furnace<br><br>
+                    Living just to watch evil get a bonus, its bogus, kindle the furnace<br><br>
 
                     And I'm sick of working dead end jobs with lame pay<br>
                     I'm tired of being hired and fired for saying nigger the same day<br>
-                    But your White, you know the rules to the game, you cant play<br>
-                    'Luckily when we die no jews or nigs because Whites wont going the same way<br><br>
+                    But your White, [you] know the rules to the game, you cant play<br>
+                    'Luckily when we die, Whites wont be going the same way<br><br>
 
-                    jews made it cool to be degenerate but it sucks to be the moral man<br>
-                    When all you need is lies to be the man plus a luxury sedan<br>
+                    jews made it cool to be degenerate, but it sucks to be the moral man<br>
+                    When all you need is lies to be the man,<br>plus a luxury sedan<br>
                     Could have been comfy and roomy in a six<br>
                     But they threw me in the mix with all these zooaphiliac lunatics<br><br>
 
-                    Walk around pissed and smoke a cig of 2 packs a day<br>
-                    And yesterday went up in smoke so quick it seems like it was just today<br>
+                    [I] Walk around pissed and smoke a cig of 2 packs a day<br>
+                    And yesterday went up in smoke so quick, it seems like it was just today<br>
                     The normies want to throw the blame but I'm too jewwoke to play<br>
                     Live half my life on Whitepills but cant seem to throw these blacks away</p>
 
                     <p>[Hook 2x]<br><br>
                     [V3]<br>
                     There's people that love me and people that hate me<br>
-                    But it's the spirit of Christ that made me this javelin toting violent Nazi<br>
+                    But it's the spirit of Christ that made me this javelin toteing violent Nazi<br>
                     I want the shitskins, niggers, the zooaphiliacs and jews gone<br>
                     Even if that means I'll end up burning in Hell scorching in flames<br><br>
 
                     That means I'm j-Walking and throwing fliers calling them out by name<br>
                     Tradeing lifetime bliss for this mortal torture and pain<br>
-                    'Cause right now I feel like just hit the rock bottom<br>
+                    'Cause right now I feel like [I] just hit the rock bottom<br>
                     If Whites got problems, make sure everybody on my blocks got 'em<br><br>
 
                     I'm screaming like Koresh and Weaver when the blueniggers shot 'em<br>
-                    Holding two Glocks, No wooden doors, this time the steel doors got new locks on 'em<br>
+                    Holding two Glocks, No wooden doors, steel doors, got new locks on 'em<br>
                     My feet arent unshodded got a pair of Boss shoes and sock's on 'em<br>
                     And them rings you wearing look like they got a few rocks on 'em<br><br>
 
-                    Now Im flaunting them handing them out to the volk from whom these jews stole them<br>
+                    Now Im flaunting them handing them out to the volk from whom [these] jews stole them<br>
                     I got a couple of rings and a brand new watch, yall want 'em?<br>
                     'Cause I never will go gold with these dumb songs<br>
                     I rather pogrom anyways with nothing but guns drawn</p>
 
-                    <p>[Hook 3x]</p>
+                    <p>[Hook 2x]</p>
               </div></div>
 
         <!--Without Me-->
