--- a/Frame/Layout/3_Content/BFASH/FashAudio/Menus/sfasongs.html
+++ b/Frame/Layout/3_Content/BFASH/FashAudio/Menus/sfasongs.html
@@ -1115,7 +1115,7 @@
                     While these supposed pro-Whites turn bitch like they have vaginas<br>
                     'Cause they see them dollar signs and let the comfort blind us<br>
                     Mammon will brainwash you and leave ya nigger brained mindless<br>
-                    To many usurious snakes who slither in the grass spineless</p>
+                    Many such cases, usurious snakes who slither in the grass spineless</p>
 
                     <p>[Hook 2x]<br>
                     That's blackpilled<br>
@@ -1129,13 +1129,13 @@
 
                     <p>[V2]<br>
                     White life was full of empty promises and broken dreams<br>
-                    I'm hoping things will look up, but Im White so ain't no job openings<br>
+                    I'm hoping things look up, but Im White, not D.E.I so ain't no job openings<br>
                     I feel discouraged hungry and malnourished<br>
                     Living just to watch evil get a bonus, its bogus, kindle the furnace<br><br>
 
                     And I'm sick of working dead end jobs with lame pay<br>
-                    I'm tired of being hired and fired for saying nigger the same day<br>
-                    But your White, [you] know the rules to the game, you cant play<br>
+                    I'm tired of being hired and fired for saying truth the same day<br>
+                    But your White, [you] not diverse, know the rules to the game, you cant play<br>
                     'Luckily when we die, Whites wont be going the same way<br><br>
 
                     jews made it cool to be degenerate, but it sucks to be the moral man<br>
@@ -1145,8 +1145,8 @@
 
                     [I] Walk around pissed and smoke a cig of 2 packs a day<br>
                     And yesterday went up in smoke so quick, it seems like it was just today<br>
-                    The normies want to throw the blame but I'm too jewwoke to play<br>
-                    Live half my life on Whitepills but cant seem to throw these blacks away</p>
+                    The normies want to throw the blame, but I'm too jewwoke to play<br>
+                    Live half my life on Whitepills, cant seem to throw these blacks away</p>
 
                     <p>[Hook 2x]<br><br>
                     [V3]<br>
@@ -1165,7 +1165,7 @@
                     My feet arent unshodded got a pair of Boss shoes and sock's on 'em<br>
                     And them rings you wearing look like they got a few rocks on 'em<br><br>
 
-                    Now Im flaunting them handing them out to the volk from whom [these] jews stole them<br>
+                    Now Im flaunting them handing out to the volk from whom [these] jews stole them<br>
                     I got a couple of rings and a brand new watch, yall want 'em?<br>
                     'Cause I never will go gold with these dumb songs<br>
                     I rather pogrom anyways with nothing but guns drawn</p>
